[package]
name = "worker-client"
version = "0.1.0"
author = "andy@ajuna.io"
edition = "2021"

[dependencies]
codec = { version = "2.0.0", default-features = false, features = ["derive"], package = "parity-scale-codec" }
bs58 = "0.4.0"
serde = "1.0.136"
serde_json = "1.0.79"
tungstenite = "0.17.2"
url = "2.2.2"
serde_derive = "1.0.136"
serde-big-array = "0.3.2"
rsa = "0.5.0"
rand = "0.8.5"
sha2 = "0.9.0"
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
# Substrate dependencies
sp-core = { version = "5.0.0", default-features = false, features = ["full_crypto"] }
sp-runtime = { version = "5.0.0", default-features = false }
sp-keyring = { version = "5.0.0" }
